--- a/pre paid/style.css
+++ b/pre paid/style.css
@@ -369,6 +369,69 @@ footer{
   margin: 0px 5px;
 }
  
-
+/* click button */
+.popup-card {
   
+  width: 400px;
+  height: 350px;
+  background:white;
+  border-radius:3px;
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.4);
+  display: none;
+  background-color: #fff; /* Set your desired background color for the popup card */
+  padding: 30px;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+   position: fixed; /* Change to 'fixed' to make it fixed on the screen */
+  transform: translate(-50%, -50%);
+  max-width: 100%; /* Set the maximum width for the popup card */
+  max-height: 100%; /* Set the maximum height for the popup card */
+  overflow: hidden; /* Hide any content that overflows */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Set your desired box shadow */
+  z-index: 2;
+  
+}
+.header1{
+  height: 68px;
+  overflow: hidden;
+  background-color:#fff;
+  border-radius: 3px 3px 0 0;
+  /* box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.4); */
+}
+.header1 img{
+  padding-left: 32px;
+  
+}
+
+.popup-card-content {
+  overflow-y: auto; /* Enable vertical scrollbar if content exceeds max-height */
+  max-height: 100%; /* Set the maximum height for the scrollable content */
+}
+
+.close-button {
+  position: absolute;
+  bottom: 1px;
+  right: 2px;
+  border: 1px solid #111;
+  border-radius: 3px;
+  color: #111;
+  padding: 8px 10px;
+  font-size: 18px;
+  cursor: pointer;
+   
+}
+.popup-card p{
+  padding-top: 10px;
+  font-size: 19px;
+  color: #1a1a1a;
+  text-align: center;
+}
+
+.popup-card.close-button button:hover{
+  color:#111;
+  background:f5f5f5;
+}
+
 
